@@ -19,7 +19,7 @@ Dist::Zilla           = 4.300033
 Dist::Zilla::Plugin::ManifestInRoot        = v0.1.0
 Dist::Zilla::Plugin::Meta::Dynamic::Config = 0.04
 Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
-Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.120120
+Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.133290
 Dist::Zilla::Plugin::Signature             = 1.100930
 Dist::Zilla::Plugin::VersionFromModule     = 0.08
 File::DataClass       = v0.25.0
